# Anubis

./: .gitignore  CMakeLists.txt  main  main.cpp
data/: moons.txt
include/: datasets.h  matplotlibcpp.h  svm.h
py/: svm.ipynb  svm.py
src/: svm.cpp
